--- a/src/components/hs-button/hs-button.css
+++ b/src/components/hs-button/hs-button.css
@@ -5,24 +5,21 @@
 }
 
 button {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  border: 0;
-  border-radius: 3em;
-  cursor: pointer;
+  font-family: var(--hs-typography-button-button-font-family);
+  font-weight: var(--hs-typography-button-button-font-weight);
+  font-size: var(--hs-typography-button-button-font-size);
+  color: var(--hs-color-foundation-background-dark-background-light-light);
+  text-transform:uppercase;
+
   display: inline-block;
+  border: 0;
+  border-radius: 0.25em;
+  cursor: pointer;
   line-height: 1;
+  box-sizing: border-box;
+  border: 0.18em solid transparent;
 }
 
-button.neutral {
-  color: var(--hs-color-body);
-  background-color: var(--hs-color-primary);
-}
-
-button.error {
-  color: var(--hs-color-body);
-  background-color: var(--hs-color-error);
-}
 
 button.small {
   font-size: 12px;
@@ -39,3 +36,83 @@ button.large {
   padding: 12px 24px;
 }
 
+button.pill,
+button.primary {
+  background-color: var(--hs-color-foundation-primary-red-normal);
+  position: relative;
+}
+
+button.primary.disabled {
+  background-color: var();
+}
+
+button.text:focus,
+button.pill:focus,
+button.primary:focus {
+  border: 0.18em solid var(--hs-color-stroke-pressed-stroke);
+}
+
+button.pill:hover,
+button.primary:hover {
+  background-color: var(--hs-color-foundation-primary-red-dark);
+}
+
+button.text:active,
+button.pill:active,
+button.primary:active {
+  border: 1px solid var(--hs-color-stroke-pressed-stroke);
+}
+
+button.text:active::before,
+button.pill:active::before,
+button.primary:active::before {
+  visibility: visible;
+}
+
+button.text::before,
+button.pill::before,
+button.primary::before{
+  content: '';
+	display: block;
+	position: absolute;
+	top: -0.25em;
+	right: -0.25em;
+	bottom: -0.25em;
+	left: -0.25em;
+	border: 1px solid var(--hs-color-foundation-primary-red-border);
+  border-radius: 0.25em;
+  visibility: hidden;
+}
+
+button.primary.disabled {
+  background-color: var(--hs-color-foundation-type-normal-hover);
+}
+
+button.payment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding:  0.375em 1.625em;
+  background-color: var(--hs-color-foundation-primary-red-normal-active);
+}
+
+button.payment.disabled {
+  background-color: var(--hs-color-foundation-type-normal-active);
+}
+
+img {
+  width: 18px;
+  padding-right: 2%;
+}
+
+button.pill {
+  border-radius: 1.125em;
+}
+button.pill::before {
+  border-radius: 1.125em;
+}
+
+button.text {
+  background-color: transparent;
+  color: var(--hs-color-foundation-background-dark-normal-hover)
+}
