--- a/src/global.css
+++ b/src/global.css
@@ -1,1 +1,2 @@
 @import url('https://fonts.cdnfonts.com/css/futura-pt');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
