--- a/src/components/hs-radio-group/hs-radio-button.css
+++ b/src/components/hs-radio-group/hs-radio-button.css
@@ -10,19 +10,19 @@ input[type=radio] {
 
 label {
   display: block;
-  padding: .8em 1.2em;
+  padding: .5em 1.2em;
 
-  background-color: darkgoldenrod;
-  color: #fff;
+  background-color: transparent;
+  color: var(--hs-color-foundation-type-dark);
+  font-family: var(--hs-typography-size-10-font-family);
+  font-weight: var(--hs-typography-size-20-font-weight);
 
   cursor: pointer;
-}
-
-label:hover:not(.selected) {
-  text-decoration: underline;
+  border-top: 2px solid transparent;
 }
 
 label:hover,
 label.selected {
-  background-color: rgb(254, 192, 36);
+  border-top: 2px solid var(--hs-color-foundation-primary-red-dark);
+  color: var(--hs-color-foundation-primary-red-dark)
 }
